--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,15 @@
 version: '3'
 services:
+  database:
+    image: postgres
+    environment:
+      POSTGRES_PASSWORD: testing
+
   api:
     build: ./api
     container_name: api
+    depends_on:
+      - database
     ports:
       - 8000:80
   
