--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.4.1",
     "@material-ui/icons": "^4.4.1",
     "axios": "^0.19.0",
+    "package.json": "^2.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
