--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,4 +1,22 @@
+aniso8601==7.0.0
+Click==7.0
+entrypoints==0.3
+flake8==3.7.8
 Flask==1.1.1
-Flask-RESTful==0.3.7
-gunicorn==19.9.0
 Flask-Cors==3.0.8
+flask-marshmallow==0.10.1
+Flask-RESTful==0.3.7
+Flask-SQLAlchemy==2.4.1
+gunicorn==19.9.0
+itsdangerous==1.1.0
+Jinja2==2.10.1
+MarkupSafe==1.1.1
+marshmallow==3.2.1
+marshmallow-sqlalchemy==0.19.0
+mccabe==0.6.1
+pycodestyle==2.5.0
+pyflakes==2.1.1
+pytz==2019.2
+six==1.12.0
+SQLAlchemy==1.3.10
+Werkzeug==0.15.6
